# gfs-distributed-file-system

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  communication-flows.md  plan.md  presentation.doc  requirements.md  simulation.md  testing-plan.md
docs/Presentation/: README.md  index.html  package-lock.json  package.json
docs/Presentation/scripts/: export-pdf.cjs
docs/Presentation/src/app/: App.tsx
docs/Presentation/src/styles/: theme.css
gfs/: config.py  metrics.py
gfs/client/: __init__.py  __main__.py  cli.py  client.py
gfs/naming_server/: __main__.py  metadata.py  server.py
gfs/storage_server/: __main__.py  server.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: gfs-overview.json
monitoring/grafana/provisioning/dashboards/: gfs.yml
proto/: gfs.proto
samples/: hello.txt
scripts/: gen_proto.py  load_simulation.py  simulate_production.py
site/: index.html
tests/: conftest.py  test_gfs.py
tests/fault_tolerance/: test_insufficient_capacity.py  test_self_healing.py  test_storage_failure.py
tests/integration/: test_chunk_boundaries.py  test_file_integrity.py  test_replication_and_size.py
tests/persistence/: test_metadata_persistence.py
