[project]
name = "distributed-file-system"
version = "0.1.0"
description = "A small runnable distributed file system inspired by Google File System."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio==1.80.0",
    "grpcio-tools==1.80.0",
    "prometheus-client==0.23.1",
    "protobuf==6.33.6",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
